<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <variable
            name="viewModel"
            type="com.captech.ld_navigation.MainViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.launchActivityEventSample()}"
                    android:padding="15dp"
                    android:text="@string/activity_event_sample" />


                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.launchFunctionActivitySample()}"
                    android:padding="15dp"
                    android:text="@string/activity_function_sample" />


                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.launchFragmentEventSample()}"
                    android:padding="15dp"
                    android:text="@string/fragment_event_sample" />


                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.launchFunctionFMSample()}"
                    android:padding="15dp"
                    android:text="@string/fragment_function_sample" />


                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.fireGenericEvent()}"
                    android:padding="15dp"
                    android:text="@string/launch_generic_event" />


                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> viewModel.showTimeStamp()}"
                    android:padding="15dp"
                    android:text="@string/show_time_stamp" />


            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </FrameLayout>

</layout>